--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,9 +1,26 @@
+<head>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script>
+		function readURL(input) {
+			if (input.files && input.files[0]) {
+				var reader = new FileReader();
+				reader.onload = function (e) {
+												$('#img_prev')
+												.attr('src', e.target.result)
+												.width(200)
+												.height(200);
+											 };
+				reader.readAsDataURL(input.files[0]);
+			}
+		}
+	</script>
+</head>
 <div id="page">
 	<div id="content">
 		<div class="post">
 			<h2 class="title"><a href="#">Update Post</a></h2>
 			<div class="entry">
-				<%= form_for @post do |f| %>
+				<%= form_for @post, :html => { :multipart => true }  do |f| %>
 				<% if @post.errors.any? %>
 					<h2>Errors</h2>
 					<ul>
@@ -85,6 +102,12 @@
 				<p>
 					<%= f.label "Video Link:" %>
 					<%= f.text_field :videolink %>
+				</p>
+				<p>
+					<img id="img_prev" src=<%=  @post.foodpic.url() %>  border = "3px" border-color = "black" alt="your image" height = "200" width = "200"/>
+				
+					<br/>
+					<%= f.file_field :foodpic, :onchange=>"readURL(this);", :accept => "image/gif, image/png, image/jpeg" %>
 				</p>
 				<p>
 					<%= f.submit "Update Post"%>
